--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "server": "nodemon src/app.js"
+    "server": "nodemon src/app.js",
+    "build": "comando-de-construccion"
   },
   "keywords": [],
   "author": "",
