Proyecto Final 2 Arreglando el put de los productos no los cargaba

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "server": "nodemon src/app.js",
-    "build": "build.command"
+    "server": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
