--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.6.1",
     "sweetalert2": "^11.7.5",
     "websocket": "^1.0.34"
