--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "build": "npm run build",
     "dev": "nodemon src/app.js",
     "server": "nodemon src/app.js"
   },
