--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "CI = run build",
+    "build": "npm run build",
     "dev": "nodemon src/app.js",
     "server": "nodemon src/app.js"
   },
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/freddymdq/thehomedrink#readme",
   "dependencies": {
+    "build": "^0.1.4",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
