--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
   },
   "homepage": "https://github.com/freddymdq/thehomedrink#readme",
   "dependencies": {
-    "@netlify/functions": "^1.6.0",
-    "@types/express": "^4.17.17",
-    "build": "^0.1.4",
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
@@ -35,7 +33,9 @@
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
-    "serverless-http": "^3.2.0",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.6.1",
     "sweetalert2": "^11.7.5",
