--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
