--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "homepage": "https://github.com/freddymdq/thehomedrink#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "commander": "^11.0.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-handlebars": "^7.0.7",
@@ -30,6 +32,7 @@
     "handlebars": "^4.7.7",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.0",
+    "mongo-store": "^0.0.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.1",
     "mongoose-paginate-v2": "^1.7.1",
