--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
+    "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
@@ -45,6 +46,7 @@
     "session-file-store": "^1.5.0",
     "socket.io": "^4.6.1",
     "sweetalert2": "^11.7.5",
+    "uuid": "^9.0.0",
     "websocket": "^1.0.34"
   },
   "description": "",
