no me toma el el ticket ni el mail, todo lo demas funciona correctamente.

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGO_URL= 'mongodb+srv://freddymdq:federico@cluster0.wm7ahcr.mongodb.net/ecommerce'
 PORT= 8080
+PERSISTENCE= 'mongo'
 SECRET_SESSION= 'CoderSecret'
-ADMIN_MAIL= 'admin@admin'
-ADMIN_PASSWORD = 'admin'
+ADMIN_MAIL= ''
+ADMIN_PASSWORD =''
