--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongo-store": "^0.0.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.1",
+    "mongoose-autopopulate": "^1.0.1",
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
