Correcion del login para ingresar con admin, ademas se corrigio el ticket que ya esta en funcionamiento, falla el login no toma la contraseña a no ser que se la actualice. Y error en el sendmail

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MONGO_URL= 'mongodb+srv://freddymdq:federico@cluster0.wm7ahcr.mongodb.net/ecommerce'
 PORT= 8080
-PERSISTENCE= 'mongo'
 SECRET_SESSION= 'CoderSecret'
-ADMIN_MAIL= ''
-ADMIN_PASSWORD =''
+MONGO_URL= 'mongodb+srv://freddymdq:federico@cluster0.wm7ahcr.mongodb.net/ecommerce?retryWrites=true&w=majority'
+PERSISTENCE= 'mongo'
+ADMIN_MAIL= 'freddymdq@gmail.com'
+ADMIN_PASSWORD ='Llapado1'
