--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ SECRET_SESSION= 'CoderSecret'
 MONGO_URL= 'mongodb+srv://freddymdq:federico@cluster0.wm7ahcr.mongodb.net/ecommerce?retryWrites=true&w=majority'
 PERSISTENCE= 'mongo'
 ADMIN_MAIL= 'freddymdq@gmail.com'
-ADMIN_PASSWORD ='Llapado1'
+ADMIN_PASSWORD =''
