--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^7.1.1",
     "mongoose-autopopulate": "^1.0.1",
     "mongoose-paginate-v2": "^1.7.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
     "nodemailer": "^6.9.3",
