--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.6.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "sweetalert2": "^11.7.5",
     "uuid": "^9.0.0",
     "websocket": "^1.0.34",
