Document API correccion por plataforma

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ MONGO_URL= 'mongodb+srv://freddymdq:federico@cluster0.wm7ahcr.mongodb.net/ecomme
 PERSISTENCE= 'mongo'
 ADMIN_MAIL= 'freddymdq@gmail.com'
 ADMIN_PASSWORD =''
-NODE_ENV = "development"
+# NODE_ENV = "development"  
