--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   },
   "description": "",
   "devDependencies": {
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.22"
   }
 }
