Correciones/ controladores user/cart fetch modificaciones rutas user sessions

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ SECRET_SESSION= 'CoderSecret'
 MONGO_URL= 'mongodb+srv://freddymdq:federico@cluster0.wm7ahcr.mongodb.net/ecommerce?retryWrites=true&w=majority'
 PERSISTENCE= 'mongo'
 ADMIN_MAIL= 'freddymdq@gmail.com'
-ADMIN_PASSWORD =''
+ADMIN_PASSWORD ='Llapado1'
 NODE_ENV = "development"  
