--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npm run build",
     "dev": "nodemon src/app.js",
-    "server": "nodemon src/app.js"
+    "server": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
