--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build",
-    "dev": "nodemon src/app.js",
-    "server": "nodemon src/app.js",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
