Correccion y funcionamiento de los botones

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 PORT= 8080
+GITHUB_CLIENT_ID= 'Iv1.2196bd64a6227d75'
+GITHUB_CLIENT_SECRET= '5153430f81a1cc24766b2b6ee9214cab2239e6b1'
 SECRET_SESSION= 'CoderSecret'
 MONGO_URL= 'mongodb+srv://freddymdq:federico@cluster0.wm7ahcr.mongodb.net/ecommerce?retryWrites=true&w=majority'
 PERSISTENCE= 'mongo'
 ADMIN_MAIL= 'freddymdq@gmail.com'
-ADMIN_PASSWORD =''
-NODE_ENV = "development"  
+ADMIN_PASSWORD = 'Llapado2'
+NODE_ENV = ""
