--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ SECRET_SESSION= 'CoderSecret'
 MONGO_URL= 'mongodb+srv://freddymdq:federico@cluster0.wm7ahcr.mongodb.net/ecommerce?retryWrites=true&w=majority'
 PERSISTENCE= 'mongo'
 ADMIN_MAIL= 'freddymdq@gmail.com'
-ADMIN_PASSWORD = '1234'
+ADMIN_PASSWORD = 'Llapado2'
 NODE_ENV = ""
