PROYECTO ACTUALIZADO FRONT ADMIN

--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ PORT= 8080
 SECRET_SESSION= 'CoderSecret'
 MONGO_URL= 'mongodb+srv://freddymdq:federico@cluster0.wm7ahcr.mongodb.net/ecommerce?retryWrites=true&w=majority'
 PERSISTENCE= 'mongo'
-ADMIN_EMAIL= 'freddymdq@gmail.com'
-ADMIN_PASSWORD ='Llapado2'
+ADMIN_EMAIL= ''
+ADMIN_PASSWORD =''
+NODE_ENV = "development"
