--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ PORT= 8080
 SECRET_SESSION= 'CoderSecret'
 MONGO_URL= 'mongodb+srv://freddymdq:federico@cluster0.wm7ahcr.mongodb.net/ecommerce?retryWrites=true&w=majority'
 PERSISTENCE= 'mongo'
-ADMIN_EMAIL= ''
-ADMIN_PASSWORD =''
+ADMIN_EMAIL= 'freddymdq@gmail.com'
+ADMIN_PASS=''
 NODE_ENV = "development"
