--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ SECRET_SESSION= 'CoderSecret'
 MONGO_URL= 'mongodb+srv://freddymdq:federico@cluster0.wm7ahcr.mongodb.net/ecommerce?retryWrites=true&w=majority'
 PERSISTENCE= 'mongo'
 ADMIN_EMAIL= 'freddymdq@gmail.com'
-ADMIN_PASS=''
+ADMIN_PASS='ewan btta fpsw fniv'
 NODE_ENV = "development"
